<resources>
    <string name="app_name">Inventory App</string>
    <string name="menu_item_Insert_dummy_data">Insert Dummy Data</string>
    <string name="menu_item_delete">Delete all products</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price : 50 $</string>
    <string name="product_quantity">Quantity : 20</string>
    <string name="button_sale">Sale</string>
    <string name="overview">Overview</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quanity</string>
    <string name="dollar">$</string>
    <string name="supplier">Supplier Info</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplie_phone">Supplier Phone</string>
    <string name="add_product">Add a Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="save">Save</string>
    <string name="del">Delete</string>
    <string name="product_name_required">Product Name Required</string>
    <string name="product_price_required">Product Price Required</string>
    <string name="product_quantity_required">Product Quantity Required</string>
    <string name="supplier_name_required">Supplier Name Required</string>
    <string name="supplier_phone_required">Supplier Phone Required</string>
    <string name="error_saving_the_product">Error Saving the Product</string>
    <string name="product_saved">Product Saved</string>
    <string name="error_with_updating_product">Error with updating product</string>
    <string name="product_updated">Product Updated</string>
    <string name="unsaved_change_dialog_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="cannot_exceed_zero">Cannot exceed zero</string>
    <string name="get_start_by_adding_products">Get start by adding some Products</string>
    <string name="order">Order</string>
    <string name="piece">Piece</string>
    <string name="sold_out">Product Sold Out.</string>
</resources>
