<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_product_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_product_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number" />

                <TextView
                    style="@style/EditorPriceStyle"
                    android:text="@string/dollar"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/edit_text_product_quantity"
                    android:layout_alignBottom="@+id/edit_text_product_quantity"
                    android:layout_toEndOf="@+id/edit_text_product_quantity"
                    android:layout_toRightOf="@+id/edit_text_product_quantity"
                    android:text="@string/piece" />

                <Button
                    android:id="@+id/qty_minus"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="-"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/qty_plus"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/qty_minus"
                    android:layout_toStartOf="@+id/qty_minus"
                    android:text="+"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_supplier_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_supplier_phone"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplie_phone"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/btn_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
